# 3D-GUI

./: .gitignore  CMakeLists.txt  README 2.md  README.md  TechnicalReport.md  slice_1080p.py  下一步修改需求提示词.md  代码生成与修改说明.md  打包与会议演示指南.md  配置参数示例.txt
backend_build/: slice_merge_tool.spec
backend_build/slice_merge_tool/: Analysis-00.toc  EXE-00.toc  PKG-00.toc  PYZ-00.pyz  PYZ-00.toc  warn-slice_merge_tool.txt  xref-slice_merge_tool.html
config/: machine_material_presets.yaml
demo_step/: step示例.step
demo_stl/: 01_basic_block.stl  02_cylinder_20mm.stl  03_star_badge.stl  04_three_towers.stl  multi_A_base_plate.stl  multi_B_cross_insert.stl
resources/: resources.qrc  style.qss
scripts/: build_windows.bat  package_backend_macos.sh  package_backend_windows.ps1  package_macos.sh  package_step_macos.sh  package_step_windows.ps1  package_windows.ps1
src/: ConfigWriter.cpp  ConfigWriter.h  MainWindow.cpp  MainWindow.h  ModelTypes.h  OpenGLView.cpp  OpenGLView.h  PresetLibrary.h  PresetLoader.cpp  PresetLoader.h  SliceExporter.cpp  SliceExporter.h  SliceWorker.cpp  SliceWorker.h  StlMesh.cpp  StlMesh.h  main.cpp
tools/: generate_demo_stls.py  step_to_stl_parts.py
ui/: MainWindow.ui
切片示例/: 实体1.stl
切片示例/切片好的/: config.yaml  run.gcode
